번역 업데이트

--- a/localisation/INOT_diplomacy_l_english.yml
+++ b/localisation/INOT_diplomacy_l_english.yml
@@ -32,4 +32,4 @@
  FTU_drills_with_ENG:0 "영국과의 훈련"
  purged_french_presence:0 "프랑스 주둔군 억제"
  FTU_remained_with_france:0 "프랑스와 계속 함께함"
- FTU_demanded_partition:0 "가부장제 요구됨"
+ FTU_demanded_partition:0 "결별 요구됨"
