--- a/localisation/POR_Portugal_l_english.yml
+++ b/localisation/POR_Portugal_l_english.yml
@@ -70,29 +70,29 @@
  POR_transferuruguaytobraziliancontrol:0 "우루과이를 브라질의 지배로 이양"
  POR_transferuruguaytobraziliancontrol_desc:0 "브라질을 재점령하였으니 우루과이를 식민 행정부 통제로 이양할 수 있습니다"
  POR_restorationofthemonarchy:0 "왕정 복고"
- POR_restorationofthemonarchy_desc:0 "The recent instability that has come from the removal of Salazar has provided the perfect opportunity for the former King of Porutgal Manuel the Second, to return to Portugal and petition the provisional Government to restore Braganza rule to Portugal."
+ POR_restorationofthemonarchy_desc:0 "살라자르의 제거로 인한 최근의 불안은 전 포루트갈 국왕 마누엘 2세에게 포르투갈로 돌아와 브라간사 통치를 복고해 달라고 임시 정부에 청원할 수 있는 완벽한 기회를 제공했습니다."
  POR_democratizetheestadonovo:0 "에스타도 노보 민주화"
- POR_democratizetheestadonovo_desc:0 "The New State has descended into a 1 party system, and the Portuguese people aren't happy. Unless we allow other political parties to exist, a Civil War will almost certainly erupt."
+ POR_democratizetheestadonovo_desc:0 "신국가는 일당 체제로 전락했고, 포르투갈 국민들은 행복하지 않습니다. 다른 정당이 존재하는 것을 허락하지 않는다면 내전은 거의 반드시 터질 것입니다."
  POR_1937generalelection:0 "1937년 총선거"
- POR_1937generalelection_desc:0 "With the regime once again being democratic a General Election should be held."
+ POR_1937generalelection_desc:0 "정권이 다시 민주화된 가운데 총선이 치러져야 합니다."
  POR_liberalmajority:0 "자유주의 다수파"
- POR_liberalmajority_desc:0 "Vitorino Guimarães has suceeded in getting a Democratic Government elected, adn will now form his cabinet."
+ POR_liberalmajority_desc:0 "비토리노 기마라에스는 민주당 정부를 선출하는데 성공했고, 이제 그의 내각을 구성할 것입니다."
  POR_conservativemajority:0 "보수주의 다수파"
  POR_conservativemajority_desc:0 ""
  POR_socialistmajority:0 "사회주의 다수파"
  POR_socialistmajority_desc:0 ""
  POR_syndicalistmajority:0 "스파르타쿠스주의와 사회주의 다수파"
- POR_syndicalistmajority_desc:0 "Bento Gonçalves is successful and will now form a Government"
+ POR_syndicalistmajority_desc:0 "벤투 곤사우베스는 성공했고 이제 정부를 구성할 것입니다."
  POR_militarytakeover:0 "군부 탈취"
  POR_militarytakeover_desc:0 ""
  POR_usemilitaryforce:0 "군사력 사용"
- POR_usemilitaryforce_desc:0 "These constant calls for democracy are damaging the economy. If we don't aggressively end these strikes, our economy will collapse and the country may descend into chaos"
+ POR_usemilitaryforce_desc:0 "민주주의에 대한 이러한 끊임없는 요구는 경제를 해치고 있습니다. 만약 이러한 파업을 강제로 끝내지 않는다면, 경제는 붕괴될 것이고 나라는 혼란에 빠질 것입니다."
  POR_removesalazar:0 "살라자르 제거"
- POR_removesalazar_desc:0 "Salazar's recent use of military force to end these protests have made him deeply unpopular with the people. We had best remove him before the public attempt to remove him themselves"
+ POR_removesalazar_desc:0 "살라자르는 최근 벌어지는 시위를 종식시키기 위해 군사력을 동원하면서 사람들의 지지를 받지 못하고 있습니다. 사람들이 그를 제거하려고 시도하기 전에 그를 제거하는 것이 최선입니다."
  POR_restoreaconstitutionalmonarchy:0 "입헌 군주정 복고"
  POR_restoreaconstitutionalmonarchy_desc:0 ""
  POR_royaluniversityoflisbon:0 "리스본 왕립대학교"
- POR_royaluniversityoflisbon_desc:0 "With the return of the monarchy, the Royal University can be restored."
+ POR_royaluniversityoflisbon_desc:0 "왕정이 돌아오면서, 왕립대학교는 복원될 수 있습니다."
  POR_purgethearmedforces:0 "군대 숙청"
  POR_purgethearmedforces_desc:0 ""
  POR_improvednationalunity:0 "개선된 국가 통일성"
@@ -130,43 +130,43 @@
  POR_invoketheangloportuguesetreatyof1373:0 "1373년 영국-포르투갈 조약 환기"
  POR_invoketheangloportuguesetreatyof1373_desc:0 "1373년의 조약은 역사상 가장 오래된 동맹이었습니다, 우리는 그 조약을 환기하여 연합국에 가입할 수 있습니다."
  POR_1937constitution:0 "1937년 헌법"
- POR_1937constitution_desc:0 "With the success of democracy and the election of a new Government, a new constitution is in order."
+ POR_1937constitution_desc:0 "민주주의의 성공과 신정부의 선출로 신헌법이 제정되었습니다."
  POR_tearuptheconstitution:0 "헌법 파기"
- POR_tearuptheconstitution_desc:0 "With the military now in control, there is no need to adhere to a constitution anymore."
+ POR_tearuptheconstitution_desc:0 "군부가 장악하고 있는 지금, 더 이상 헌법을 고수할 필요가 없습니다."
  POR_declaremartiallaw:0 "계엄령 선포"
- POR_declaremartiallaw_desc:0 "If we are to maintain order, we must implement Martial Law to control the populus."
+ POR_declaremartiallaw_desc:0 "질서를 유지하려면 계엄령을 시행하여 민중을 통제해야 합니다."
  POR_establishmilitaryacadamies:0 "사관학교 설립"
  POR_establishmilitaryacadamies_desc:0 ""
  POR_newgenerals:0 "신임 장교"
- POR_newgenerals_desc:0 "Now that the high command has control over government spending we can finally expand our number of generals without oppisition."
+ POR_newgenerals_desc:0 "이제 최고사령부가 정부 지출에 대한 통제권을 갖게 되었으니, 마침내 장군 수를 반대 없이 늘릴 수 있습니다."
  POR_installfamilymembersinthehighcommand:0 "최고사령부에 가문 구성원 임용"
- POR_installfamilymembersinthehighcommand_desc:0 "After the military removed Salazar from power, Kind Manuel II is rightfully concerned about their loyalty and, as such, is placing accomplished members of the royal family into military command positions."
+ POR_installfamilymembersinthehighcommand_desc:0 "군부가 살라자르를 권좌에서 축출한 후, 마누엘 2세는 그들의 충성심에 대해 당연히 염려하고 있으며, 따라서, 왕실의 뛰어난 일원들을 군 지휘관으로 배치하고 있습니다."
  POR_invitetrotsky:0 "트로츠키 초대"
- POR_invitetrotsky_desc:0 "Our military is not exactly loyal to the communist cause, if we place Leon Trotsky in charge of the military, then we can be assured of its future loyalties."
+ POR_invitetrotsky_desc:0 "우리 군은 공산당의 대의에 충성을 다하지 않습니다. 만약 레프 트로츠키에게 군에 맡긴다면, 공산당의 앞으로의 충성을 확신할 수 있을 것입니다."
  POR_declaretheiberiancommune:0 "이베리아 코뮌 선포"
  POR_declaretheiberiancommune_desc:0 "이베리아의 모든 노동자여 단결하라! 우린 더이상 스페인인이나 포르투갈인이 아니다, 오늘부터 우리는 형제다!"
  POR_declareaonepartystate:0 "일당제 국가 선언"
- POR_declareaonepartystate_desc:0 "With us now in control of the state, we can limit our opposition by declaring that only the communist party and its affiliates can exist."
+ POR_declareaonepartystate_desc:0 "우리가 국가를 장악하고 있는 지금, 공산당과 그 산하기관들만이 존재할 수 있다고 선언함으로써 반대파를 제한할 수 있습니다."
  POR_expanddockyardfacilities:0 "조선소 시설 확장"
  POR_expanddockyardfacilities_desc:0 "강한 해군을 건설하려면, 조선소가 더 필요합니다."
  POR_advancedmilitaryweapons:0 "개혁된 현대 군대"
- POR_advancedmilitaryweapons_desc:0 "With our reforms in doctrines and advances in technology our army can be considered living up to modern standards."
+ POR_advancedmilitaryweapons_desc:0 "교리 개혁과 기술의 발전으로 우리 군대는 현대 표준에 부응하는 것으로 여겨질 수 있습니다."
  POR_developnavalhulls:0 "해군 선체 개발"
- POR_developnavalhulls_desc:0 "If we are to expand the navy, we need to get newer and stronger ship hulls"
+ POR_developnavalhulls_desc:0 "해군을 확장하려면 더 새롭고 강력한 함선을 확보해야 합니다."
  POR_motorised:0 "차량화"
- POR_motorised_desc:0 "The future is mobile warfare. Horses do not belong to that kind of warfare anymore. The army must be motorized."
+ POR_motorised_desc:0 "미래는 기동전에 있습니다. 기병은 더 이상 미래전에 맞지 않습니다. 군대는 차량화되어야 합니다."
  POR_tanks:0 "전차"
- POR_tanks_desc:0 "The Tank is still in its early phases and we were never sure if we wanted to invest into such a project. But the tank has become a necassary part of an army now and so we have the responsibility to manage tanks ourselves."
+ POR_tanks_desc:0 "전차는 아직 초기 단계이고 계획에 투자해야 하는 지 확신할 수 없습니다. 하지만 전차는 이제 군대의 필수적인 요소이 되었으며 전차를 직접 관리할 책임이 있습니다."
  POR_artillery:0 "포병"
- POR_artillery_desc:0 "Artillery is the backbone of the army. Furthermore Portugal consists of heavy amounts of Tungesten. We have an advantage in terms of artillery compared to other nations."
+ POR_artillery_desc:0 "포병은 군대의 중추입니다. 게다가 포르투갈에는 많은 양의 텅스텐이 매장되어 있습니다. 우리는 다른 나라에 비해 포병 면에서 유리합니다."
  POR_modernisation:0 "현대화"
- POR_modernisation_desc:0 "Our army has barely developed in the last decade. We have to reform the divisions and develop new tactics."
+ POR_modernisation_desc:0 "지난 10년간 우리 군대는 거의 발전하지 못했습니다. 사단을 개혁하고 새로운 전술을 개발해야 합니다."
  POR_progovernmentpropaganda:0 "친정부 선전"
- POR_progovernmentpropaganda_desc:0 "In these days you can trust almost no one. Great Powers are fighting for world domination. We can not fall behind anymore."
+ POR_progovernmentpropaganda_desc:0 "이 시기에는 거의 아무도 믿을 수 없습니다. 강대국들은 세계 지배를 위해 싸우고 있습니다. 우리는 더 이상 뒤쳐질 수 없습니다."
  POR_militaryexpansion:0 "군대 확장"
- POR_militaryexpansion_desc:0 "On land, sea or air our army is lacking. This needs to change."
+ POR_militaryexpansion_desc:0 "땅에서도, 바다에서도, 하늘에서조차도 우리 군대는 부족합니다. 이는 바꿔야만 합니다."
  POR_upgradednavalweaponry:0 "개량된 해상 무장"
- POR_upgradednavalweaponry_desc:0 "New Batteries, Torpedos and other equipment is needed to improve the quality of our ships."
+ POR_upgradednavalweaponry_desc:0 "새 포대, 어뢰 및 기타 장비가 우리 선박의 품질을 향상시키기 위해 필요합니다."
  POR_amphibioustanks:0 "수륙양용 전차"
  POR_amphibioustanks_desc:0 "Our tanks will mostly fight in muddy terrain, jungles or beaches. We should developd models better suited for such terrain."
  POR_navalinvasiontraining:0 "해군 상륙 훈련"
@@ -191,42 +191,42 @@
  POR_advancedcruiserdesigns_desc:0 "For every heavy ship there is needed 4 Cruisers and we can not fall behind cruisers."
  POR_battleshipdesigns:0 "전함 설계"
  POR_battleshipdesigns_desc:0 "New Hulls for the upcoming Galleons of the fleet."
- POR_updateddestroyerdesigns:0 "Updated Destroyer Designs"
- POR_updateddestroyerdesigns_desc:0 "No submarine shall disturb our trade."
- POR_updatedsubmarinedesigns:0 "Updated Submarine Designs"
- POR_updatedsubmarinedesigns_desc:0 "Our subs will be wolves of the sea."
- POR_portuguesegalleons:0 "Portuguese Galleons"
- POR_portuguesegalleons_desc:0 "The time has come to bring back the navy back to its glory."
- POR_moderncarrierdesigns:0 "Modern Carrier Designs"
+ POR_updateddestroyerdesigns:0 "최신 구축함 설계"
+ POR_updateddestroyerdesigns_desc:0 "그 어떤 잠수함도 우리 수송로를 방해하지 못할 것입니다."
+ POR_updatedsubmarinedesigns:0 "최신 잠수함 설계"
+ POR_updatedsubmarinedesigns_desc:0 "우리 잠수함들은 바다의 늑대가 될 것입니다."
+ POR_portuguesegalleons:0 "포르투갈의 갈레온"
+ POR_portuguesegalleons_desc:0 "해군을 영광의 때로 되돌려 놓을 때가 왔습니다."
+ POR_moderncarrierdesigns:0 "현대 항공모함 설계"
  POR_moderncarrierdesigns_desc:0 "If we want a complete modern navy we should consider a carrier."
- POR_moderndesigns:0 "Modern Designs"
+ POR_moderndesigns:0 "현대적 설계"
  POR_moderndesigns_desc:0 "The fighter needs to improved over and over again."
- POR_establishtheportugueseairforce:0 "Establish the Portuguese Airforce"
+ POR_establishtheportugueseairforce:0 "포르투갈 공군 창설"
  POR_establishtheportugueseairforce_desc:0 "Portugal needs an airforce to protects its navy and support the ground troops in the future."
- POR_fighterdevelopment:0 "Fighter Development"
+ POR_fighterdevelopment:0 "전투기 개발"
  POR_fighterdevelopment_desc:0 "For an airforce we need our own good fighter model which secure air superiority and protects our bombers."
- POR_carrierbasedmodels:0 "Carrier-based Models"
+ POR_carrierbasedmodels:0 "항공모함 기반 모델"
  POR_carrierbasedmodels_desc:0 "Some modifications to the naval bomber can make them usable for carries."
- POR_bomberproject:0 "Bomber Project"
+ POR_bomberproject:0 "폭격기 계획"
  POR_bomberproject_desc:0 "We should invest into a bobmer which can support the roles of ground support, strategic bombing and attacking naval fleets."
- POR_establishaparliamentaryassembly:0 "Establish a Parliamentary Assembly"
+ POR_establishaparliamentaryassembly:0 "의회 설치"
  POR_establishaparliamentaryassembly_desc:0 "For far too long have the Portuguese People been able to feel properly represented. The introduction of a Parliamentary Assembly will allow them to feel truly represented."
- POR_lightbombers:0 "Light Bombers"
+ POR_lightbombers:0 "경폭격기"
  POR_lightbombers_desc:0 "Lighter Bombers made solely for supporting the army are a good way to balance the budget and break enemy defenses."
- POR_navalbombers:0 "Naval Bombers"
+ POR_navalbombers:0 "뇌격기"
  POR_navalbombers_desc:0 "Our airforce need to be active over the seas aswell."
- POR_stay_true_to_the_republic:0 "Stay true to the Republic"
+ POR_stay_true_to_the_republic:0 "공화국에 충실하라"
  POR_stay_true_to_the_republic_desc:0 "No longer shall the Republic be weakened due to corruption and incompetence. The Republic shall never fall again to a dicaturship."
- POR_defend_this_land:0 "Defending this Nation"
- POR_ban_extremist:0 "Banning Extremist Parties"
+ POR_defend_this_land:0 "나라를 지키며"
+ POR_ban_extremist:0 "극단주의 정당 금지"
  POR_ban_extremist_desc:0 "Nationalism and Commnunism pose a threat to the stability of the Republic. Since those people want to limit all free speech we will limit theirs."
- POR_industry_reform:0 "Industry Reform"
+ POR_industry_reform:0 "산업 개혁"
  POR_industry_reform_desc:0 "We will accomplish what Salazar never could. Expand the industry of Portugal for the people."
- POR_fascism_begin:0 "A new movement"
+ POR_fascism_begin:0 "신운동"
  POR_fascism_begin_desc:0 "A new movement is growing in popularity. Inspired by the Fascist Party in Austria, the National Syndicalist Movement was created. It is based off Austro-Fascist Ideas, Political Catholism but also socialist ideas. Due to the politcal instability many see this party as a new option for stability which does not involve a Military junta. Many conservatives, catholics and socialists are now joining this movement."
- POR_cooperate_movimento:0 "Cooperate with the new movement"
+ POR_cooperate_movimento:0 "신운동에 협력"
  POR_cooperate_movimento_desc:0 "The National Syndicalist movement is growing stronger and stronger. While this movement threatens our rule and its socialist theories stand against what we stand before, we can not continue suppressing it. To avoid a civil war we will unite our party the \"National Union"
- POR_national_syndicalists:0 "A new age for Portugal"
+ POR_national_syndicalists:0 "포르투갈의 새 시대"
  POR_national_syndicalists_desc:0 "The miltiary junta thought it control us by merging the National Union with our movement. They were mistaken. We have convinced several former members of the N.U. of our cause and have gained connection with several generals and officers. The Nation Syndicalist revolution can not be stopped. In a few days our member will overthrow the junta with support from several generals."
  POR_nat_syd_start:0 "In Control"
  POR_nat_syd_start_desc:0 "Now we are in control and now we shall fullfill our promises."
