--- a/localisation/aus_focus_l_english.yml
+++ b/localisation/aus_focus_l_english.yml
@@ -28,7 +28,7 @@
  AUS_free_market:0 "시장이 자유로울수록, 사람들도 자유롭다"
  AUS_free_market_desc:0 "대전 전 며칠 동안 우리 경제는 비교적 폐쇄적이었습니다. 우리의 산업과 농업이 다시 한번 활기를 띠면서, 우리는 오스트리아 시장을 세계에 수출과 수입에 개방할 때입니다."
  AUS_serbian_claims:0 "보이보디나 요구"
- AUS_serbian_claims_desc:0 "세르비아인들은 우리의 제국을 살릴 수 있는 유일한 사람인 프란츠 페르디난트를 죽임으로써 오스트리아를 모욕했습니다. 전쟁이 끝난 후, 그들은 오늘날 보이보디나로 알려진 세르비아 주의 영토를 훔쳤습니다. 우리는 우리의 정당한 땅을 되찾아야 합니다."
+ AUS_serbian_claims_desc:0 "세르브인들은 우리의 제국을 살릴 수 있는 유일한 사람인 프란츠 페르디난트를 죽임으로써 오스트리아를 모욕했습니다. 전쟁이 끝난 후, 그들은 오늘날 보이보디나로 알려진 세르비아 주의 영토를 훔쳤습니다. 우리는 우리의 정당한 땅을 되찾아야 합니다."
  AUS_colonial_claims:0 "오스트리아 식민 제국"
  AUS_colonial_claims_desc:0 "제국으로서 오스트리아의 식민지 소유권은... 무기력했습니다. 우리의 전성기에, 우리는 오스트리아와 북부 보르네오의 일부에서 항구를 열었습니다. 하지만, 우리의 북쪽 형제인 독일은 전 세계에 식민지를 가지고 있었습니다. 독일이 분열된 상황에서, 우리는 그들의 식민지를 되찾도록 노력해야 합니다... 우리 자신의 것으로 말입니다."
  AUS_austria_hungary:0 "두 나라를 하나로"
@@ -50,9 +50,9 @@
  AUS_balkan_policy:0 "동쪽으로!"
  AUS_balkan_policy_desc:0 "루마니아와의 관계를 놓고 우리나라가 분열되어 있는 가운데 불가리아는 떠오르는 터키로부터 스스로를 보호하기 위해 우리의 동맹에 동참하는 것을 기뻐할 것입니다."
  AUS_alliance_with_cro:0 "크로아티아 개입"
- AUS_alliance_with_cro_desc:0 "우리 제국으로부터의 이탈이 오래 전에 잊혀진 상황에서, 우리는 크로아티아인들과 동맹을 맺어야 합니다."
+ AUS_alliance_with_cro_desc:0 "우리 제국으로부터의 이탈이 오래 전에 잊혀진 상황에서, 우리는 크로아트인들과 동맹을 맺어야 합니다."
  AUS_alliance_with_serb:0 "세르비아 회원"
- AUS_alliance_with_serb_desc:0 "흑수단 문제가 오랫동안 잊혀진 상황에서, 우리는 세르비아인들과 동맹을 맺어야 합니다."
+ AUS_alliance_with_serb_desc:0 "흑수단 문제가 오랫동안 잊혀진 상황에서, 우리는 세르브인들과 동맹을 맺어야 합니다."
  AUS_alliance_with_gre:0 "그리스에 닿기"
  AUS_alliance_with_gre_desc:0 "아드리아에 대한 우리의 경쟁은 오랫동안 잊혀진 채, 우리는 그리스와 동맹을 추구해야 합니다."
  AUS_alliance_with_alb:0 "알바니아 접근"
