--- a/localisation/bel_focus_l_english.yml
+++ b/localisation/bel_focus_l_english.yml
@@ -19,43 +19,43 @@
  BEL_secular_education_desc:0 "Up until this point education was controlled by the spiritual leaders of the country. Catholics went to a Catholic school, and Protestants to a Protestant school. We should introduce secularized education so we can take proper control over what our populace gets taught."
  BEL_election_victory_catholic:0 "카톨릭의 선거 승리"
  BEL_election_victory_catholic_desc:0 "After a democratic election, the Catholic-conservative party assumes the leadership of our country."
- BEL_unemployment_measures:0 "Unemployment Measures"
+ BEL_unemployment_measures:0 "실업에 대한 조치"
  BEL_unemployment_measures_desc:0 "We have had some issues with high unemployment for a while now. These should be fixed. Get our citizens off the streets!"
- BEL_devalue_the_currency:0 "Devalue the Belgian Franc"
+ BEL_devalue_the_currency:0 "벨기에 프랑화 평가절하"
  BEL_devalue_the_currency_desc:0 "With devaluation, exports become cheaper and thus more attractive for foreign companies. This will increase demands for certain products, allowing us to create more jobs."
  BEL_40h_work_week:0 "주 40 시간 근무"
  BEL_40h_work_week_desc:0 "In order to increase our industrial potential, we have to prolong the work week to 40 hours. This will however cause some issues with our citizens, but it cannot be helped. We need all the output we can get!"
- BEL_state_companies:0 "Expand State Companies"
+ BEL_state_companies:0 "국영회사 확장"
  BEL_state_companies_desc:0 "To provide income and stabilize our economy, we must expand our state owned companies. By doing this we will be able to satisfy government needs as well as create new jobs for the population."
- BEL_support_boeren:0 "Support the Boerenbond"
+ BEL_support_boeren:0 "부렌본트 지원"
  BEL_support_boeren_desc:0 "Boerenbond is a professional association of farmers in the Flemish as well as other German speaking communities of Belgium. By supporting them, we will be able to achieve higher agriculture production to feed Belgium should some sort of a blockade occur."
- BEL_encourage_corporations:0 "Encourage Corporations"
+ BEL_encourage_corporations:0 "협력 장려"
  BEL_encourage_corporations_desc:0 "If our government will ease taxes and create more favorable climate for private coorporations, more of such enterprises will come to Belgium and expand here rather than abroad."
- BEL_king_leopolds_investments:0 "King Leopolds Investments"
+ BEL_king_leopolds_investments:0 "국왕 레오폴트의 투자"
  BEL_king_leopolds_investments_desc:0 "We could use our King's wealth to support construction of new factories. This will both give us the industry we need and will boost Leopold's popularity."
- BEL_bulwark_of_unity:0 "The Belgian Bulwark"
+ BEL_bulwark_of_unity:0 "벨기에의 보루"
  BEL_bulwark_of_unity_desc:0 "With proper construction as well as investment strategies, Belgium will be the powerhouse of the Benelux."
- BEL_support_research:0 "Invest into Innovations"
+ BEL_support_research:0 "혁신에 투자"
  BEL_support_research_desc:0 "For technology acquision, we should not rely on our Western or Eastern neighbours. Belgium must be self sufficient, even when it comes to innovations."
- BEL_economic_council:0 "Establish the Economic Council"
+ BEL_economic_council:0 "경제 위원회 설립"
  BEL_economic_council_desc:0 "While Belgian industry is not large enough yet, it must be regulated and improve where it's needed. Under new leadership and thanks to Economic Council, we will be able to better direct resources where it's necessary."
- BEL_welfare_state:0 "Foundations for the Welfare State"
+ BEL_welfare_state:0 "복지 국가의 기초"
  BEL_welfare_state_desc:0 "Our new policy, our government will protect and promote economic and social well-being of the citizens, based upon principles of equal opportunity."
- BEL_nationalize_the_industry:0 "Nationalization of the Industry"
+ BEL_nationalize_the_industry:0 "산업 국유화"
  BEL_nationalize_the_industry_desc:0 "With a pro-marxist government, major Belgian industry must be nationalized to achieve higher production standards set up by the new government."
- BEL_support_small_buisnesses:0 "Support Small Business"
+ BEL_support_small_buisnesses:0 "소규모 사업 지원"
  BEL_support_small_buisnesses_desc:0 "While we are nationalizing major industry, we must let small business grow as well. Without that, our major industry will collapse."
- BEL_expand_mining_industry:0 "Expand Mining Industry"
+ BEL_expand_mining_industry:0 "광업 확대"
  BEL_expand_mining_industry_desc:0 "Today, resources decide everything. By expanding our steel mines in Vlaanderen, Belgium will not need to purchase steel elsewhere, thus becoming more independent."
  BEL_plan_de_man:0 "Plan de Man"
  BEL_plan_de_man_desc:0 "Also known as the Labour Plan, is an economic plan devised by Henri De Man to combat the economic situation currently experienced by Belgium. It aims at instilling a mixed economic system by the creation of a partially nationalized sector."
  BEL_plan_de_man_finished:0 "Plan de Man Completed"
  BEL_plan_de_man_finished_desc:0 "Plan de Man is finally completed. We are no longer in recovery but on path to becoming a regional powerhouse."
- BEL_catholic_education:0 "Support Catholic Education"
+ BEL_catholic_education:0 "가톨릭 교육 지원"
  BEL_catholic_education_desc:0 "Catholic education must be obligatory in schools to promote bright ideas of peace and prosperity to younger ones."
  BEL_election_victory_rex:0 "Rex & VNV Coalition Victory"
  BEL_election_victory_rex_desc:0 "The people have voted and decided. Large Portions of the Wallonian population supports the rising Rexist party and large portions of Flanders support the Vlaams National Verbond the two authoritarian parties have decided to form a coalition and assume together the leadership of this country."
- BEL_great_purge:0 "The Great Purge"
+ BEL_great_purge:0 "대숙청"
  BEL_great_purge_desc:0 "We have many enemies who oppose the incoming new order. This coalition will already be hard enough to maintain we can not have any sort of opposition. Antagonistic parties, unions and influential individuals need to be §R--Redacted--§"
  bel_purge_tt:0 "§RThe Rexists and the VNV will solidify their victory with any means necessary§"
  BEL_embrace_catholicism:0 "카톨릭 포용"
@@ -70,7 +70,7 @@
  BEL_election_victory_communist_desc:0 "After a democratic election, the Communist Party assumes the leadership of our country."
  BEL_fate_of_the_king:0 "왕의 운명"
  BEL_fate_of_the_king_desc:0 "The king has time and again proven his incompetence as a ruler, but is an important national symbol for our people. We should carefully decide his fate..."
- BEL_redistribute_means_production:0 "Redistribute the Means of Production"
+ BEL_redistribute_means_production:0 "생산 수단 재분배"
  BEL_redistribute_means_production_desc:0 "The means of production belong to those who use them! Redistribute them among the workers!"
  BEL_classless_society:0 "계급 없는 사회"
  BEL_classless_society_desc:0 "Classes are a cancer on modern society. They only divide people. Removing classes should unite them!"
