--- a/localisation/chi_events_l_english.yml
+++ b/localisation/chi_events_l_english.yml
@@ -59,8 +59,8 @@
  china.1018.a:0 "유감이다."
  china.1019.t:0 "후한민의 죽음"
  china.1019.t_other:0 "후한민의 죽음"
- china.1019.d:0 "국민당의 정치가 후한민이 1936년 5월 12일 오늘 사망했는데, 사망 원인은 뇌출혈입니다. 1928년부터 1931년까지 입법원 총재를 지냈고, 최근 국민당 의장에 임명된 그는 일본과 그 팽창주의에 대한 단호한 행동 옹호자일 뿐만 아니라 장제스의 최대 정적이었습니다. 두 사람은 과거에도 여러 차례 충돌한 적이 있는데, 특히 장제스가 1931년 새 임시헌법에 관한 분쟁으로 그를 가택 연금시켰을 때 가장 두드러집니다. 국민당의 정치 상황은 그 어느 때보다 불안합니다."
- china.1019.d_other:0 "국민당의 정치가 후한민이 1936년 5월 12일 오늘 사망했는데, 사망 원인은 뇌출혈입니다. 1928년부터 1931년까지 입법원 총재를 지냈고, 최근 국민당 의장에 임명된 그는 일본과 그 팽창주의에 대한 단호한 행동 옹호자일 뿐만 아니라 장제스의 최대 정적이었습니다. 두 사람은 과거에도 여러 차례 충돌한 적이 있는데, 특히 장제스가 1931년 새 임시헌법에 관한 분쟁으로 그를 가택 연금시켰을 때 가장 두드러집니다. 국민당의 정치 상황은 그 어느 때보다 불안합니다."
+ china.1019.d:0 "국민당의 정치가 후한민이 1936년 5월 12일 오늘 사망했는데, 사망 원인은 뇌출혈입니다. 1928년부터 1931년까지 입법원 총재를 지냈고, 최근 국민당 주석에 임명된 그는 일본과 그 팽창주의에 대한 단호한 행동 옹호자일 뿐만 아니라 장제스의 최대 정적이었습니다. 두 사람은 과거에도 여러 차례 충돌한 적이 있는데, 특히 장제스가 1931년 새 임시헌법에 관한 분쟁으로 그를 가택 연금시켰을 때 가장 두드러집니다. 국민당의 정치 상황은 그 어느 때보다 불안합니다."
+ china.1019.d_other:0 "국민당의 정치가 후한민이 1936년 5월 12일 오늘 사망했는데, 사망 원인은 뇌출혈입니다. 1928년부터 1931년까지 입법원 총재를 지냈고, 최근 국민당 주석에 임명된 그는 일본과 그 팽창주의에 대한 단호한 행동 옹호자일 뿐만 아니라 장제스의 최대 정적이었습니다. 두 사람은 과거에도 여러 차례 충돌한 적이 있는데, 특히 장제스가 1931년 새 임시헌법에 관한 분쟁으로 그를 가택 연금시켰을 때 가장 두드러집니다. 국민당의 정치 상황은 그 어느 때보다 불안합니다."
  china.1019.a:0 "험난한 시기가 앞에 놓여 있다."
  china.1019.b:0 "중국의 상황이 뜨거워질지도 모른다."
  china.1020.t:0 "상하이 재무장"
