--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1,14 +1,14 @@
 ﻿l_english:
- INS_HOL_democratic:0 "네덜란드령 동인도제도"
- INS_HOL_democratic_DEF:0 "네덜란드령 동인도제도"
+ INS_HOL_democratic:0 "네덜란드령 동인도"
+ INS_HOL_democratic_DEF:0 "네덜란드령 동인도"
  INS_JAP_democratic:0 "인도네시아"
  INS_JAP_democratic_DEF:0 "인도네시아 공화국"
  INS_JAP_fascism:0 "인도네시아"
  INS_JAP_fascism_DEF:0 "인도네시아 공화국"
  INS_BEL_union:0 "베네룩스령 동인도"
- INS_BEL_union_DEF:0 "베네룩스령 동인도제도"
- INS_subject:0 "$OVERLORDADJ$령 동인도제도"
- INS_subject_DEF:0 "$OVERLORDADJ$령 동인도제도"
+ INS_BEL_union_DEF:0 "베네룩스령 동인도"
+ INS_subject:0 "$OVERLORDADJ$령 동인도"
+ INS_subject_DEF:0 "$OVERLORDADJ$령 동인도"
  BRM_ENG_conservatives:0 "영국령 버마"
  BRM_ENG_conservatives_DEF:0 "버마 영국식민지"
  BRM_ENG_democratic:0 "영국령 버마"
