--- a/localisation/fra_l_english.yml
+++ b/localisation/fra_l_english.yml
@@ -133,7 +133,7 @@
  FR_strike_east:0 "동부에 혁명 전파"
  FR_strike_east_desc:0 "때가 되었으니 동부를 쳐야 합니다. 영광스러운 인민군은 베를린을 향해 진군한 다음 모스크바를 점령할 것입니다. 혁명 만세!"
  FR_fascist:0 "프랑스에 영광을!"
- FR_fascist_desc:0 "우리는 마침내 알자스-로렌을 불법적으로 압류한 것에 대해 프로이센인들에게 복수를 하게 되었습니다. 하지만 왜 거기서 멈춰야 합니까? 우리 국경 밖에는 수백만의 프랑스 동료들이 있는데, 이제 삼색기 밑에서 통일해야 할 때입니다!"
+ FR_fascist_desc:0 "우리는 마침내 알자스-로렌을 불법적으로 압류한 것에 대해 프로이센에게 복수를 하게 되었습니다. 하지만 왜 거기서 멈추겠습니까? 우리 국경 밖에는 수백만의 프랑스 동료들이 있으니, 이제 삼색기 밑에서 통일해야 할 때입니다!"
  FR_war_ITA:0 "사보이-피에몬트 탈환"
  FR_war_ITA_desc:0 "19세기 초에 우리는 사보이 피에몬트 지역을 손에 넣을 수 있었습니다. 이 땅에는 프랑스인이 많지 않지만, 우리의 자연경계 중 하나입니다! 우리는 항상 그 지역에 새로운 프랑스인들을 정착시킬 수 있고... 이탈리아 사람들을 돌볼 수 있을 것입니다."
  FR_kingdom_restoration:0 "왕정복고"
@@ -275,7 +275,7 @@
  SYR_state_DEF:0 "시리아"
  SYR_state_ADJ:0 "시리아"
  FRA_political_actions_decisions:0 "정부 개혁"
- FRA_political_actions_decisions_desc:0 "프랑스 제3공화국은 많은 어려운 시기를 겪었습니다. 대전쟁 중 서부 전선의 베르덩 전투에서 여러 세대를 잃었습니다.\n\n프랑스는 여전히 건재했지만, 지금의 평화 시기에도 공화국은 고전하고 있습니다. 우리 정부는 취약하고 비효율적입니다. 프랑스의 정치체제는 여러 이념적 조직이 등장하면서 그 상황을 통제하기가 점점 더 어려워지고 있습니다.\n\n무너지기 전에 수리하고 고치는 일은 우리에게 달려 있습니다...\n\n마르크스주의자들의 영향력: [FRA_left_wing_influence] \n\n악시옹 프랑세즈의 영향력: [FRA_centre_wing_influence] \n\n공안위원회의 영향력: [FRA_right_wing_influence]\n"
+ FRA_political_actions_decisions_desc:0 "프랑스 제3공화국은 많은 어려운 시기를 겪었습니다. 대전쟁 중 서부 전선의 베르됭 전투에서 여러 세대를 잃었습니다.\n\n프랑스는 여전히 건재했지만, 지금의 평화 시기에도 공화국은 고전하고 있습니다. 우리 정부는 취약하고 비효율적입니다. 프랑스의 정치체제는 여러 이념적 조직이 등장하면서 그 상황을 통제하기가 점점 더 어려워지고 있습니다.\n\n무너지기 전에 수리하고 고치는 일은 우리에게 달려 있습니다...\n\n마르크스주의자들의 영향력: [FRA_left_wing_influence] \n\n악시옹 프랑세즈의 영향력: [FRA_centre_wing_influence] \n\n공안위원회의 영향력: [FRA_right_wing_influence]\n"
  FRA_arrest_communists_decision:0 "공산주의 정치인 체포"
  FRA_supress_communists_decision:0 "공산주의 신문 탄압"
  FRA_arrest_fascists_decision:0 "국민주의 정치인 체포"
