--- a/localisation/ftu_focus_l_english.yml
+++ b/localisation/ftu_focus_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
- FTU_partition:0 "Demand Patriation!"
+ FTU_partition:0 "결별 요구!"
  FTU_partition_desc:0 "Enough of the French rule! We shall seek patriation and eventual independence, even if it means by force..."
- FTU_fascist:0 "Ethnic Supremacy"
+ FTU_fascist:0 "민족 우월성"
  FTU_fascist_desc:0 "The French have oppressed our native people for decades. It's time that we break free from their rule and establish a government that puts us, the native people, above the French invaders."
- FTU_ethinic_boudaries:0 "Ethnic Boundaries"
+ FTU_ethinic_boudaries:0 "민족 경계"
  FTU_ethinic_boudaries_desc:0 "The French have established arbitrary straight lines based on convenience, rather than boundaries based on our ethnic divisions. This must be rectified."
  FTU_forced_labour:0 "강제 노동"
  FTU_forced_labour_desc:0 "The French have oppressed our people, and it is time to give them justice. We shall put the French invaders that remain in our rightful land to work, even if it kills them!"
