--- a/localisation/gen_states_l_english.yml
+++ b/localisation/gen_states_l_english.yml
@@ -202,80 +202,80 @@
  gen_states.27.b:0 "동독을 발칸화하라."
  gen_states.27.c:0 "동독을 점령하라."
  gen_states.28.t:0 "쿠반의 운명"
- gen_states.28.d:0 "The region of Kuban is under [Root.GetAdjective] control, how should we procede?"
- gen_states.28.a:0 "Kuban is Russian"
- gen_states.28.e:0 "Occupy Southern Kuban"
- gen_states.28.b:0 "Split between Ukraine and Russia"
- gen_states.28.c:0 "Occupy Kuban"
- gen_states.29.t:0 "Fate of Georgia"
- gen_states.29.d:0 "The country of Georgia is under [Root.GetAdjective] control, how should we procede?"
- gen_states.29.a:0 "Establish friendly Georgia"
- gen_states.29.b:0 "Seize Batumi, establish Georgia"
- gen_states.29.c:0 "Occupy Georgia"
- gen_states.30.t:0 "Fate of Azerbajan"
- gen_states.30.d:0 "The country of Azerbajan is under [Root.GetAdjective] control, how should we procede?"
- gen_states.30.a:0 "Establish friendly Azerbajan"
- gen_states.30.b:0 "Continue occupation"
- gen_states.31.t:0 "Fate of Armenia"
- gen_states.31.d:0 "The country of Armenia is under [Root.GetAdjective] control, how should we procede?"
- gen_states.31.a:0 "Establish friendly Armenia"
- gen_states.31.b:0 "Establish Greater Armenia"
- gen_states.31.e:0 "Kars is Turkish"
- gen_states.31.c:0 "Continue occupation"
- gen_states.32.t:0 "Fate of Karelia"
- gen_states.32.d:0 "The region of Karelia is under [Root.GetAdjective] control, how should we procede?"
- gen_states.32.a:0 "Split between Russia and Finland"
- gen_states.32.b:0 "Karelia is Russian"
- gen_states.32.c:0 "Karjala is Finnish"
- gen_states.32.e:0 "Occupy Karelia"
- gen_states.33.t:0 "Fate of Crimea"
- gen_states.33.d:0 "The region of Crimea is under [Root.GetAdjective] control, how should we procede?"
- gen_states.33.a:0 "Crimea is Russian"
- gen_states.33.b:0 "Crimea is Ukrainian"
- gen_states.33.c:0 "Continue occupation"
- gen_states.34.t:0 "Status of the Far East"
- gen_states.34.d:0 "The region of Russian Far East is under [Root.GetAdjective] control, how should we procede?"
- gen_states.34.a:0 "Far East is Russian"
- gen_states.34.b:0 "Give Vladivostok to Japan"
- gen_states.34.c:0 "Occupy the Far East"
- gen_states.35.t:0 "Status of Spain"
- gen_states.35.d:0 "The country of Spain is under [Root.GetAdjective] control, how should we procede?"
- gen_states.35.a:0 "Establish friendly Spain"
- gen_states.35.b:0 "Seize Galicia"
- gen_states.35.c:0 "Occupy Spain"
- gen_states.36.t:0 "Status of Central Asia"
- gen_states.36.d:0 "The region of Central Asia is under [Root.GetAdjective] control, how should we procede?"
- gen_states.36.a:0 "Establish friendly Bukhara"
- gen_states.36.b:0 "Central Asia is Russian"
- gen_states.36.c:0 "Occupy Central Asia"
- gen_states.37.t:0 "Status of Hungary"
- gen_states.37.d:0 "The country of Hungary is under [Root.GetAdjective] control, how should we procede?"
- gen_states.37.a:0 "Restore the Hungarian State"
- gen_states.37.b:0 "Restore Hungary but Burgenland is Austrian"
- gen_states.37.c:0 "Occupy Hungary"
- gen_states.38.t:0 "Status of Bulgaria"
- gen_states.38.d:0 "The country of Bulgaria is under [Root.GetAdjective] control, how should we procede?"
- gen_states.38.a:0 "Restore friendly Bulgaria"
- gen_states.38.b:0 "Seize Thrace and Edirne"
- gen_states.38.e:0 "Thrace is Greek, Edirne is Turkish"
- gen_states.38.c:0 "Occupy Bulgaria"
- gen_states.39.t:0 "Status of Albania"
- gen_states.39.d:0 "The country of Albania is under [Root.GetAdjective] control, how should we procede?"
- gen_states.39.a:0 "Restore friendly Albania"
- gen_states.39.b:0 "Seize Southern Albania"
- gen_states.39.c:0 "Occupy Albania"
- gen_states.40.t:0 "Status of Turkey"
- gen_states.40.d:0 "The country of Turkey is under [Root.GetAdjective] control, how should we procede?"
- gen_states.40.a:0 "Restore friendly Turkey"
- gen_states.40.b:0 "Seize Southern Turkey"
- gen_states.40.c:0 "Seize Kurdish lands"
- gen_states.40.e:0 "Restore Turkey and Armenia"
- gen_states.40.f:0 "Occupy Turkey"
- gen_states.41.t:0 "Status of Turkish West Coast"
- gen_states.41.d:0 "The region of Turkish West Coast is under [Root.GetAdjective] control, how should we procede?"
- gen_states.41.a:0 "Give it to Turks"
- gen_states.41.b:0 "Give it to Greeks"
- gen_states.41.c:0 "Continue military occupation"
- GER_puppet:0 "German Provisional Government"
- GER_puppet_DEF:0 "The German Provisional Government"
- GER_puppet_ADJ:0 "German"
+ gen_states.28.d:0 "쿠반 지역이 [Root.GetAdjective] 통제하에 있습니다. 어떻게 진행해야 합니까?"
+ gen_states.28.a:0 "쿠반은 러시아다."
+ gen_states.28.e:0 "쿠반 남부를 점령하라."
+ gen_states.28.b:0 "우크라이나를 러시아와 분리하라."
+ gen_states.28.c:0 "쿠반을 점령하라."
+ gen_states.29.t:0 "조지아의 운명"
+ gen_states.29.d:0 "조지아 지역이 [Root.GetAdjective] 통제하에 있습니다. 어떻게 진행해야 합니까?"
+ gen_states.29.a:0 "우호적인 조지아를 수립하라."
+ gen_states.29.b:0 "바투미를 점령하고, 조지아를 수립하라."
+ gen_states.29.c:0 "조지아를 점령하라."
+ gen_states.30.t:0 "아제르바이잔의 운명"
+ gen_states.30.d:0 "아제르바이잔 지역이 [Root.GetAdjective] 통제하에 있습니다. 어떻게 진행해야 합니까?"
+ gen_states.30.a:0 "우호적인 아제르바이잔을 수립하라."
+ gen_states.30.b:0 "점령을 지속하라."
+ gen_states.31.t:0 "아르메니아의 운명"
+ gen_states.31.d:0 "아르메니아 지역이 [Root.GetAdjective] 통제하에 있습니다. 어떻게 진행해야 합니까?"
+ gen_states.31.a:0 "우호적인 아르메니아를 수립하라."
+ gen_states.31.b:0 "대아르메니아를 수립하라."
+ gen_states.31.e:0 "카르스는 터키다."
+ gen_states.31.c:0 "점령을 지속하라."
+ gen_states.32.t:0 "카렐리야의 운명"
+ gen_states.32.d:0 "카렐리야 지역이 [Root.GetAdjective] 통제하에 있습니다. 어떻게 진행해야 합니까?"
+ gen_states.32.a:0 "핀란드를 러시아와 분리하라."
+ gen_states.32.b:0 "카렐리야는 러시아다."
+ gen_states.32.c:0 "카렐리야는 핀란드다."
+ gen_states.32.e:0 "카렐리야를 점령하라."
+ gen_states.33.t:0 "크림의 운명"
+ gen_states.33.d:0 "크림 지역이 [Root.GetAdjective] 통제하에 있습니다. 어떻게 진행해야 합니까?"
+ gen_states.33.a:0 "크림은 러시아다."
+ gen_states.33.b:0 "크림은 우크라이나다."
+ gen_states.33.c:0 "점령을 지속하라."
+ gen_states.34.t:0 "극동의 지위"
+ gen_states.34.d:0 "러시아 극동 지역이 [Root.GetAdjective] 통제하에 있습니다, 어떻게 진행해야 합니까?"
+ gen_states.34.a:0 "극동은 러시아다."
+ gen_states.34.b:0 "블라디보스토크를 일본에 줘라."
+ gen_states.34.c:0 "극동을 점령하라."
+ gen_states.35.t:0 "스페인의 지위"
+ gen_states.35.d:0 "스페인 지역이 [Root.GetAdjective] 통제하에 있습니다. 어떻게 진행해야 합니까?"
+ gen_states.35.a:0 "우호적인 스페인을 수립하라."
+ gen_states.35.b:0 "갈리시아를 점령하라."
+ gen_states.35.c:0 "스페인을 점령하라."
+ gen_states.36.t:0 "중앙아시아의 지위"
+ gen_states.36.d:0 "중앙아시아 지역이 [Root.GetAdjective] 통제하에 있습니다. 어떻게 진행해야 합니까?"
+ gen_states.36.a:0 "우호적인 부하라를 수립하라."
+ gen_states.36.b:0 "중앙아시아는 러시아다."
+ gen_states.36.c:0 "중앙아시아를 점령하라."
+ gen_states.37.t:0 "헝가리의 지위"
+ gen_states.37.d:0 "헝가리 지역이 [Root.GetAdjective] 통제하에 있습니다. 어떻게 진행해야 합니까?"
+ gen_states.37.a:0 "헝가리국을 복원하라."
+ gen_states.37.b:0 "헝가리를 복원하지만 부르겐란트는 오스트리아다."
+ gen_states.37.c:0 "헝가리를 점령하라."
+ gen_states.38.t:0 "불가리아의 지위"
+ gen_states.38.d:0 "불가리아 지역이 [Root.GetAdjective] 통제하에 있습니다. 어떻게 진행해야 합니까?"
+ gen_states.38.a:0 "우호적인 불가리아를 복원하라."
+ gen_states.38.b:0 "트라키아와 에디르네를 점령하라."
+ gen_states.38.e:0 "트라키아는 그리스이고, 에디르네는 터키다."
+ gen_states.38.c:0 "불가리아를 점령하라."
+ gen_states.39.t:0 "알바니아의 지위"
+ gen_states.39.d:0 "알바니아 지역이 [Root.GetAdjective] 통제하에 있습니다. 어떻게 진행해야 합니까?"
+ gen_states.39.a:0 "우호적인 알바니아를 복원하라."
+ gen_states.39.b:0 "알바니아 남부를 점령하라."
+ gen_states.39.c:0 "알바니아를 점령하라."
+ gen_states.40.t:0 "터키의 지위"
+ gen_states.40.d:0 "터키는 [Root.GetAdjective] 통제하에 있습니다, 어떻게 진행해야 합니까?"
+ gen_states.40.a:0 "우호적인 터키를 복원하라."
+ gen_states.40.b:0 "터키 남부를 점령하라."
+ gen_states.40.c:0 "쿠르드의 땅을 점령하라."
+ gen_states.40.e:0 "터키와 아르메니아를 복원하라."
+ gen_states.40.f:0 "터키를 점령하라."
+ gen_states.41.t:0 "터키 서해안의 지위"
+ gen_states.41.d:0 "터키 서해안 지역이 [Root.GetAdjective] 통제하에 있습니다. 어떻게 진행해야 합니까?"
+ gen_states.41.a:0 "터키에게 줘라."
+ gen_states.41.b:0 "그리스에게 줘라."
+ gen_states.41.c:0 "군사 점령을 지속하라."
+ GER_puppet:0 "독일 임시정부"
+ GER_puppet_DEF:0 "독일 임시정부"
+ GER_puppet_ADJ:0 "독일"
