--- a/localisation/ger_events_l_english.yml
+++ b/localisation/ger_events_l_english.yml
@@ -202,10 +202,10 @@
  holland.1006.a:0 "이양하라."
  holland.1006.b:0 "가지고 있는다."
  prussia_homeland.1.t:0 "한스 폰 젝트의 서거!"
- prussia_homeland.1.d:0 "오늘 아침 일찍, 프로이센인의 지도자는 베를린 외곽의 그의 거주지에서 사망한 채로 발견되었습니다. 그는 70세의 나이로 세상을 떠났습니다.\n\n한스 폰 젝트는 프로이센의 군사 국가를 형성하고 있는 독일군이 세계 대전에서 패한 후 프로이센의 권력을 장악했습니다. 그 이후로 프로이센 왕국은 회복의 길을 걸었습니다.\n\n한스 폰 젝트는 프로이센의 미래에 대한 보수적인 견해로 잘 알려져 있었습니다. 그의 죽음으로 프로이센 사람들은 마침내 다른 방향으로 갈지도 모릅니다... 그의 후계자인 아우구스트 폰 마켄센이 다음 주에 그의 직책을 맡을 것으로 예상됩니다."
+ prussia_homeland.1.d:0 "오늘 아침 일찍, 프로이센 국민의 지도자가 베를린 외곽에 있는 그의 거주지에서 사망한 채로 발견되었습니다. 그는 70세의 나이로 세상을 떠났습니다.\n\n한스 폰 젝트는 프로이센의 군사 국가를 형성하고 있는 독일군이 세계 대전에서 패한 후 프로이센의 권력을 장악했습니다. 그 이후로 프로이센 왕국은 회복의 길을 걸었습니다.\n\n한스 폰 젝트는 프로이센의 미래에 대한 보수적인 견해로 잘 알려져 있었습니다. 그의 죽음으로 프로이센 사람들은 마침내 다른 방향으로 갈지도 모릅니다... 그의 후임인 아우구스트 폰 마켄센이 다음 주에 그의 직책을 맡을 것으로 예상됩니다."
  prussia_homeland.1.a:0 "나쁜 소식이다!"
  prussia_homeland.2.t:0 "프로이센 독재자의 죽음!"
- prussia_homeland.2.d:0 "오늘 아침 일찍, 프로이센인의 지도자는 베를린 외곽의 그의 거주지에서 사망한 채로 발견되었습니다. 그는 70세의 나이로 세상을 떠났습니다.\n\n한스 폰 젝트는 프로이센의 군사 국가를 형성하고 있는 독일군이 세계 대전에서 패한 후 프로이센의 권력을 장악했습니다. 그 이후로 프로이센 왕국은 회복의 길을 걸었습니다.\n\n한스 폰 젝트는 프로이센의 미래에 대한 보수적인 견해로 잘 알려져 있었습니다. 그의 죽음으로 프로이센 사람들은 마침내 다른 방향으로 갈지도 모릅니다... 그의 후계자인 아우구스트 폰 마켄센이 다음 주에 그의 직책을 맡을 것으로 예상됩니다."
+ prussia_homeland.2.d:0 "오늘 아침 일찍, 프로이센 국민의 지도자가 베를린 외곽에 있는 그의 거주지에서 사망한 채로 발견되었습니다. 그는 70세의 나이로 세상을 떠났습니다.\n\n한스 폰 젝트는 프로이센의 군사 국가를 형성하고 있는 독일군이 세계 대전에서 패한 후 프로이센의 권력을 장악했습니다. 그 이후로 프로이센 왕국은 회복의 길을 걸었습니다.\n\n한스 폰 젝트는 프로이센의 미래에 대한 보수적인 견해로 잘 알려져 있었습니다. 그의 죽음으로 프로이센 사람들은 마침내 다른 방향으로 갈지도 모릅니다... 그의 후임인 아우구스트 폰 마켄센이 다음 주에 그의 직책을 맡을 것으로 예상됩니다."
  prussia_homeland.2.a:0 "흥미롭군..."
  prussia_homeland.2.b:0 "나쁜 소식이다!"
  prussia_homeland.2.c:0 "그가 죽어서 정말 다행이다!"
@@ -232,7 +232,7 @@
  GER_hell_for_prussia:0 "에른스트-에버하드 헬 재임명"
  GER_rommel_for_prussia:0 "에르빈 롬멜 재임명"
  GER_imminent_civil_war:0 "임박한 내전"
- GER_imminent_civil_war_desc:0 "전선이 그려졌습니다... 독일 내전이 일어날 것은 매우 분명합니다. 프로이센인들은 올겨울 공세를 준비하고 있습니다. 독일 내의 나라들과 제휴해야 합니다. 당신의 나라와 동맹을 맺은 나라들이 당신과 함께 싸우게 될 것입니다."
+ GER_imminent_civil_war_desc:0 "전선이 그려졌습니다... 독일 내전이 일어날 것은 매우 분명합니다. 프로이센은 올겨울 공세를 준비하고 있습니다. 독일 내의 나라들과 제휴해야 합니다. 당신의 나라와 동맹을 맺은 나라들이 당신과 함께 싸우게 될 것입니다."
  GER_imminent_civil_war_decision:0 "내전 준비"
  GER_imminent_civil_war_outbreak_decision:0 "내전 발발!"
  GER_align_SAX:0 "작센과의 제휴"
