--- a/localisation/grk_focus_l_english.yml
+++ b/localisation/grk_focus_l_english.yml
@@ -116,7 +116,7 @@
  GRK_ships:0 "해상 주력"
  GRK_ships_desc:0 "우리 해군의 증설이 최우선 과제가 되어야 합니다. 사용 가능한 모든 자원을 새로운 조선소에 할당하고 경량함에 대한 연구를 실시합니다."
  ger_civilwar.1.t:0 "프로이센과의 재통일"
- ger_civilwar.1.d:0 "지난 1년 동안 우리는 프로이센인들과 긴밀하게 협력해왔습니다. 우리는 이제 바이에른을 적으로 간주합니다. 우리가 할 수 있는 모든 것과 완전한 통합을 의미하는 것으로 프로이센을 지원할 것입니다."
+ ger_civilwar.1.d:0 "지난 1년 동안 우리는 프로이센과 긴밀하게 협력해왔습니다. 우리는 이제 바이에른을 적으로 간주합니다. 우리가 할 수 있는 모든 것과 완전한 통합을 의미하는 것으로 프로이센을 지원할 것입니다."
  ger_civilwar.1.a:0 "프로이센과 함께하라."
  ger_civilwar.1.b:0 "독립을 유지하라."
  ger_civilwar.2.t:0 "바이에른과의 재통일"
