--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -1614,7 +1614,7 @@
  LUX_martin_karp:0 "마틴 카프"
  LUX_pierre_krier:0 "피에르 크리에"
  LUX_emile_speller:0 "에밀 슈펠러"
- LUX_alexander_von_falkenhausen:0 "Alexander von Falkenhausen"
+ LUX_alexander_von_falkenhausen:0 "알렉산더 폰 할켄하우젠"
  LUX_guillaume_soisson:0 "기욤 수아송"
  LUX_nicholas_diedrich:0 "니콜라스 디드리히"
  LUX_paul_medinger:0 "폴 메딩거"
@@ -2314,7 +2314,7 @@
  ENG_colonial_elite:0 "식민지 엘리트"
  ENG_king_edward:0 "에드워드 8세"
  ENG_king_edward_fascism:0 "에드워드 8세"
- ENG_italian_dockyards:0 "Italian dockyards"
+ ENG_italian_dockyards:0 "이탈리아 조선소"
  ENG_george_vi:0 "조지 6세"
  ENG_george_vi_desc:0 "영연방의 첫 수장이자 인도의 마지막 황제인 조지 6세는 여전히 위대한 유산의 상속자로 여겨집니다.  그의 아버지처럼, 인기 있는 얼굴마담이며 영국 국민들을 통합할 정신적 지주입니다."
  ENG_continuation_of_politics:0 "정치의 연속"
@@ -2362,7 +2362,7 @@
  ITA_junio_valerio_borghese:0 "주니오 발레리오 보르게세"
  ITA_paolo_thaon_di_revel:0 "파올로 타온 디 레벨"
  ITA_german_millitary_cooperation_focus:0 "독일의 군사적 협력"
- ITA_lost_dockyards:0 "Transferred Naval Production to Britain"
+ ITA_lost_dockyards:0 "영국으로 이양된 해군 생산"
  ITA_railway:0 "Working on the Cape to Cairo Railway"
  JAP_mitsumasa_yonai:0 "요나이 미쓰마사"
  JAP_hiroshi_oshima:0 "오오시마 히로시"
