--- a/localisation/rus_events_l_english.yml
+++ b/localisation/rus_events_l_english.yml
@@ -247,7 +247,7 @@
  russia.94.a:0 "걱정되는군..."
  russia.94.b:0 "걱정되는군..."
  russia.91.t:0 "독일이 저지 독일을 합병하다!"
- russia.91.d:0 "의심할 여지 없이 프로이센의 니더데츠클랜드 합병은 압제 행위입니다.\n프로이센인들은 브뤼셀 조약을 어기고 친독 정부를 수립하기 위해 북독일을 점령했습니다. 우리 정부는 조약 위반자들을 불안정하게 하고 처벌하기 위해 제재를 가할 것을 제안합니다.\n대안으로는 프로이센에 제재를 피함으로써 강력한 동맹이 될 새 독일 제국과 우호적 관계를 맺을 수 있을 것입니다..."
+ russia.91.d:0 "의심할 여지 없이 프로이센의 저지 독일 합병은 압제 행위입니다.\n프로이센은 브뤼셀 조약을 어기고 친독 정부를 수립하기 위해 북독일을 점령했습니다. 우리 정부는 조약 위반자들을 불안정하게 하고 처벌하기 위해 제재를 가할 것을 제안합니다.\n대안으로는 프로이센에 제재를 피함으로써 강력한 동맹이 될 새 독일 제국과 우호적 관계를 맺을 수 있을 것입니다..."
  russia.91.a:0 "프로이센을 제재하라."
  russia.91.b:0 "제재는 안 된다, 독일과 좋은 관계를 유지하는 게 좋을 것이다."
  russia.92.t:0 "러시아의 제재"
