--- a/localisation/ser_focus_l_english.yml
+++ b/localisation/ser_focus_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  SER_annex_MNT:0 "몬테네그로 통치 확립"
- SER_annex_MNT_desc:0 "몬테네그로는 세르비아인들로 가득 찬 왕국입니다. 그들의 경제는 폐허가 되었고, 그들의 유일한 구원자는 우리입니다. 몬테네그로 형제들을 환영하고 마침내 해안선을 얻을 수 있게 해야 합니다!"
+ SER_annex_MNT_desc:0 "몬테네그로는 세르브인들로 가득 찬 왕국입니다. 그들의 경제는 폐허가 되었고, 그들의 유일한 구원자는 우리입니다. 몬테네그로 형제들을 환영하고 마침내 해안선을 얻을 수 있게 해야 합니다!"
  SER_unify_the_balkans:0 "기로에 선 세르비아"
  SER_unify_the_balkans_desc:0 "우리는 무력한 나라입니다. 우리 산업은 폐허가 되었고, 우리 국민은 공산주의와 왕정주의 지지자들에 의해 분열되었고, 다른 나라와의 관계는 산산조각 났습니다. 우리는 발칸반도를 지배하고 세계 강국이 되기 위해 어떤 길을 갈지 선택해야 합니다."
  SER_embrace_socialism:0 "사회주의 포용"
@@ -69,7 +69,7 @@
  SER_create_yugoslavia_desc:0 "Croatia has finally agreed to unification. The dream of a united South Slavic state is finally becoming a reality. Serbia and Croatia no longer exist. All hail Yugoslavia!"
  SER_massive_recruitment:0 "세르비아-크로아티아 군대 통합"
  SER_massive_recruitment_desc:0 "With our ties to Croatia reinforced, we need to integrate our two armies into one South Slavic army. This will not be an easy task, but the reward is immense."
- SER_slovenia:0 "슬로베니아인 해방"
+ SER_slovenia:0 "슬로벤인 해방"
  SER_slovenia_desc:0 "Slovenia, or as its known in Austria, Carniola, remained Austrian due to Russia wanting a stable and Pro-Russian Austria. Their efforts were in vain. Austria is now ruled by fascists who are suppressing the Slovene people and their culture! We must aid our South Slavic brothers and destroy this menace once and for all!"
  SER_zara_and_istria:0 "라팔로 조약 파기"
  SER_zara_and_istria_desc:0 "Croatia and Italy signed an unequal treaty to ensure Dalmatia stays Croatian and that Zadar becomes Italian. We must liberate the Slovenes in Istria and the Croats in Zadar, and put down this menace to the Adriatic, for the safety of our country!"
