--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -149,10 +149,10 @@
  STATE_148:0 "라피"
  STATE_149:0 "포흐얀마"
  STATE_150:0 "사보"
- STATE_151:0 "독일령 스위스"
+ STATE_151:0 "독일계 스위스"
  STATE_152:0 "상오스트리아"
  STATE_153:0 "티롤"
- STATE_154:0 "아폴드"
+ STATE_154:0 "알푈드"
  STATE_155:0 "트란스다뉴비아"
  STATE_156:0 "칼라브리아"
  STATE_157:0 "아브루초"
@@ -609,8 +609,8 @@
  STATE_608:0 "베이징"
  STATE_609:0 "동허베이"
  STATE_610:0 "러허"
- STATE_611:0 "남차하르"
- STATE_612:0 "차하르"
+ STATE_611:0 "남차하얼"
+ STATE_612:0 "차하얼"
  STATE_613:2 "상하이"
  STATE_614:0 "허베이"
  STATE_615:0 "산시 (산서)"
