--- a/localisation/sweden_focus_l_english.yml
+++ b/localisation/sweden_focus_l_english.yml
@@ -33,7 +33,7 @@
  SWE_agrarian_self_sufficiency_desc:0 "The agricultural sector of our economy is in dire need to be expanded. We can not truly rely anymore on foreign food imports, and we need to support our own agricultural sector, as to expand Sweden's population."
  SWE_secure_free_trade_agreements:0 "Ensure Free Trade with Europe"
  SWE_secure_free_trade_agreements_desc:0 "The freer the markets, the freer the people, and thusly, free trade must be ensured. With an open economy, we will be able to utilise the full potential of our factories, construction companies, and research."
- SWE_invite_british_investors:0 "Invite British Investors"
+ SWE_invite_british_investors:0 "영국 투자자 초청"
  SWE_invite_british_investors_desc:0 "British investors have a lot of interest in our country's industrial capacity. By cooperating with them, we can establish workplaces (and potentially influence) within Britian."
  SWE_subsidise_small_buisnesses:0 "Subsidise Small Buisnesses"
  SWE_subsidise_small_buisnesses_desc:0 "Small buisnesses shall not be left behind to fall to big corporations. The government will ensure that they will be supported like the rest."
