--- a/localisation/wtt_decisions_l_english.yml
+++ b/localisation/wtt_decisions_l_english.yml
@@ -347,8 +347,8 @@
  CHI_expand_the_airlift:0 "험프 공수보급로의 수송량 증가"
  PRC_infiltrate_east_hebei:0 "동허베이 침투"
  PRC_infiltrate_jehol:0 "러허 침투"
- PRC_infiltrate_south_chahar:0 "남차하르 침투"
- PRC_infiltrate_chahar:0 "차하르 침투"
+ PRC_infiltrate_south_chahar:0 "남차하얼 침투"
+ PRC_infiltrate_chahar:0 "차하얼 침투"
  PRC_infiltrate_heilungkiang:0 "헤이룽장 침투"
  PRC_infiltrate_liaoning:0 "랴오닝 침투"
  PRC_anti_japanese_uprising:0 "반일 봉기"
@@ -360,8 +360,8 @@
  communist_uprising:0 "공산주의자 봉기"
  communist_infiltration_in_east_hebei:0 "동허베이 공산주의자 침투"
  communist_infiltration_in_jehol:0 "러허 공산주의자 침투"
- communist_infiltration_in_south_chahar:0 "남차하르 공산주의자 침투"
- communist_infiltration_in_chahar:0 "차하르 공산주의자 침투"
+ communist_infiltration_in_south_chahar:0 "남차하얼 공산주의자 침투"
+ communist_infiltration_in_chahar:0 "차하얼 공산주의자 침투"
  communist_infiltration_in_heilungkiang:0 "헤이룽장 공산주의자 침투"
  communist_infiltration_in_liaoning:0 "랴오닝 공산주의자 침투"
  GER_aid_hun_rom_democratic_civil_war:0 "민주주의의 새싹"
