--- a/localisation/aus_events_l_english.yml
+++ b/localisation/aus_events_l_english.yml
@@ -118,7 +118,7 @@
  austria.1035.d:0 "최근 헝가리의 합병으로 우리는 이전의 제국을 모두 지배하게 되었습니다. 정부도 이제 슬로바키아 정부의 요지가 충족됐고, 이제는 국가에 협력하기로 결정했습니다. 하지만 새로운 영토가 없어지면, 우리는 우리나라의 위상을 재고할 필요가 있습니다."
  austria.1035.a:0 "영광을 회복한다."
  austria.1036.t:0 "슬로베니아에서의 불안정"
- austria.1036.d:0 "오스트리아의 모든 사람들이 최근의 변화에 대해 기뻐하는 것은 아닌 것 같습니다. 하지만 슬로베니아 민족은 특히 우리의 새 정부에 대해 불만인 것 같습니다. 대전이 끝난 후 슬로베니아는 이탈리아, 크로아티아, 오스트리아로 분할될 예정이었습니다. 이탈리아화와 분할이라는 운명을 피하기 위해, 슬로베니아인들은 오스트리아, 러시아, 그리고 협상국에게 오스트리아의 지배 하에 남게 두기를 요청했습니다. 오스트리아의 통치를 완전히 좋아하지는 않았지만, 슬로베니아는 지난 수십 년 동안 여전히 크게 번창했고 결코 큰 차별을 겪지 않았습니다. 오스트리아, 크로아티아, 이탈리아 간의 더 많은 충돌을 피하기 위해 연합국들은 타협했습니다. 오스트리아는 슬로베니아를 유지할 수 있을 것이고, 지방은 자치권을 행사할 수 있을 것입니다. 결국 류블랴나 주는 자치권을 획득했고, 독일 인구가 더 많은 저지 스티리야는 오스트리아에 완전히 통합되었습니다. 돌푸스는 류블랴나에 대한 자치권을 폐지하지 않았고 현재 많은 슬로베니아인들은 오스트리아화를 두려워하고 있습니다. 공산주의자들로 유명한 파르티잔 집단들이 결성되어 행정부와 사회 기반 시설을 공격하고 있습니다."
+ austria.1036.d:0 "오스트리아의 모든 사람들이 최근의 변화에 대해 기뻐하는 것은 아닌 것 같습니다. 하지만 슬로베니아 민족은 특히 우리의 새 정부에 대해 불만인 것 같습니다. 대전이 끝난 후 슬로베니아는 이탈리아, 크로아티아, 오스트리아로 분할될 예정이었습니다. 이탈리아화와 분할이라는 운명을 피하기 위해, 슬로벤인들은 오스트리아, 러시아, 그리고 협상국에게 오스트리아의 지배 하에 남게 두기를 요청했습니다. 오스트리아의 통치를 완전히 좋아하지는 않았지만, 슬로베니아는 지난 수십 년 동안 여전히 크게 번창했고 결코 큰 차별을 겪지 않았습니다. 오스트리아, 크로아티아, 이탈리아 간의 더 많은 충돌을 피하기 위해 연합국들은 타협했습니다. 오스트리아는 슬로베니아를 유지할 수 있을 것이고, 지방은 자치권을 행사할 수 있을 것입니다. 결국 류블랴나 주는 자치권을 획득했고, 독일 인구가 더 많은 저지 스티리야는 오스트리아에 완전히 통합되었습니다. 돌푸스는 류블랴나에 대한 자치권을 폐지하지 않았고 현재 많은 슬로벤인들은 오스트리아화를 두려워하고 있습니다. 공산주의자들로 유명한 파르티잔 집단들이 결성되어 행정부와 사회 기반 시설을 공격하고 있습니다."
  austria.1036.a:0 "행동을 취해야 한다."
  austria.1037.t:0 "슬로베니아 파르티잔 사냥"
  austria.1037.d:0 "최근 슬로베니아 민족에 의한 류블랴나에서의 공격은 즉각적인 주의가 필요합니다. 돌푸스는 슬로베니아의 소요사태에 대처하기 위해 특수부대 창설을 지시했습니다. 이 특수부대는 임의의 수단을 사용하여 파르티잔들을 추적할 것이며 여러 가지 권리를 침해할 수 있습니다. 게다가, 이것은 다가오는 분쟁에서 발생하는 분규와 불안을 다루는데 있어 이 헌병대들에게 좋은 시험대가 될 것입니다."
