--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1215,8 +1215,8 @@
  SHX_fascism_DEF:0 "국민주의 중국"
  SHX_democratic:0 "중화민국"
  SHX_democratic_DEF:0 "중화민국"
- SHX_neutrality:0 "청 제국"
- SHX_neutrality_DEF:0 "청 제국"
+ SHX_neutrality:0 "대청국"
+ SHX_neutrality_DEF:0 "대청국"
  SHX_communism:0 "중화소비에트공화국"
  SHX_communism_DEF:0 "중화소비에트공화국"
  SHX_fascism_ADJ:0 "중국"
