--- a/localisation/equip_air_l_english.yml
+++ b/localisation/equip_air_l_english.yml
@@ -1,11 +1,11 @@
 ﻿l_english:
  fighter:0 "전투기"
- fighter_equipment_desc:0 "전투기는 빠르고 날렵하며 많은 임무를  수행할 수 있습니다. 제공권 확보를 위한 공중전, 아군 폭격기 보호, 적 폭격기 요격까지 모든 것을 할 수 있습니다."
+ fighter_equipment_desc:0 "전투기는 빠르고 날렵하며 많은 임무를 수행할 수 있습니다. 제공권 확보를 위한 공중전, 아군 폭격기 보호, 적 폭격기 요격까지 모든 것을 할 수 있습니다."
  cv_fighter:0 "전투기"
- cv_fighter_equipment_desc:0 "전투기는 빠르고 날렵하며 많은 임무를  수행할 수 있습니다. 제공권 확보를 위한 공중전, 아군 폭격기 보호, 적 폭격기 요격까지 모든 것을 할 수 있습니다."
+ cv_fighter_equipment_desc:0 "전투기는 빠르고 날렵하며 많은 임무를 수행할 수 있습니다. 제공권 확보를 위한 공중전, 아군 폭격기 보호, 적 폭격기 요격까지 모든 것을 할 수 있습니다."
  jet_fighter:0 "전투기"
  jet_fighter_equipment:0 "제트전투기"
- jet_fighter_equipment_desc:0 "전투기는 빠르고 날렵하며 많은 임무를  수행할 수 있습니다. 제공권 확보를 위한 공중전, 아군 폭격기 보호, 적 폭격기 요격까지 모든 것을 할 수 있습니다."
+ jet_fighter_equipment_desc:0 "전투기는 빠르고 날렵하며 많은 임무를 수행할 수 있습니다. 제공권 확보를 위한 공중전, 아군 폭격기 보호, 적 폭격기 요격까지 모든 것을 할 수 있습니다."
  cas:1 "근접항공지원기"
  CAS_equipment_desc:0 "근접항공지원기는 지상 전투를 지원하기 위해 설계 되었습니다."
  cv_cas:1 "근접항공지원기(함재기)"
@@ -22,10 +22,10 @@
  heavy_fighter:0 "중전투기"
  heavy_fighter_equipment_desc:0 "중전투기는 긴 항속거리와 강력한 무장을 가지고 있습니다. 중전투기는 범위 내 아군 폭격기 보호와 적군 폭격기 요격 둘 다 적합합니다.  하지만 제한적인 기동성은 일반 전투기들과의 싸움에서는 불리하게 작용할 것입니다."
  strat_bomber:0 "전략폭격기"
- strat_bomber_equipment_desc:0 "전략폭격기는 적 건물과 사회 기반 시설을 공격하여, 전쟁 수행에 필수적인 산업시설들을 사용할 수 없게 만들 것입니다"
+ strat_bomber_equipment_desc:0 "전략폭격기는 적 건물과 기반시설을 공격하여, 전쟁 수행에 필수적인 산업시설들을 사용할 수 없게 만들 것입니다."
  jet_strat_bomber:2 "제트전략폭격기"
  jet_strat_bomber_equipment:2 "제트전략폭격기"
- jet_strat_bomber_equipment_desc:0 "전략폭격기는 적 건물과 사회 기반 시설을 공격하여, 전쟁 수행에 필수적인 산업시설들을 사용할 수 없게 만들 것입니다"
+ jet_strat_bomber_equipment_desc:0 "전략폭격기는 적 건물과 기반시설을 공격하여, 전쟁 수행에 필수적인 산업시설들을 사용할 수 없게 만들 것입니다."
  transport_plane:0 "수송기"
  transport_plane_equipment_desc:0 "목적지까지 공수부대를 수송합니다."
  guided_missile:0 "로켓"
@@ -41,7 +41,7 @@
  fighter_equipment_0_desc:0 "제1차 세계대전 동안 전투기는 많은 변화를 겪었고, 이후에, 복엽기 설계는 구식이 되었습니다. 우리는 민간 기술의 진보를 군사적 응용으로 변환하기 시작해야 합니다."
  fighter_equipment_1:0 "전투기 I"
  fighter_equipment_1_short:0 "전투기 I"
- fighter_equipment_1_desc:0 "가벼운 항공기체는 방사형태의 엔진 도입과 단엽기 설계, 완전 금속제 외피 구조를 포함해 대변혁을 일으켰습니다. 이 설계는 우리의 첫번째 현대적인 전투기를 만드는 첫번째 도전입니다."
+ fighter_equipment_1_desc:0 "가벼운 항공기체는 방사형태의 엔진 도입과 단엽기 설계, 완전 금속제 외피 구조를 포함해 대변혁을 일으켰습니다. 이 설계는 우리의 첫 번째 현대적인 전투기를 만드는 시도입니다."
  fighter_equipment_2:0 "전투기 II"
  fighter_equipment_2_short:0 "전투기 II"
  fighter_equipment_2_desc:0 "전투기의 발전 속도는 놀랍기 그지없으며, 우리는 기술의 통합과 기존 개념의 발전을 계속 유지해야 합니다. 우리의 새 전투기 설계는 고고도에서 높은 속도와 성능을 가지고 최고의 항속거리 가능해야합니다. 게다가 추가적으로 무장도 매우 잘 되어야 합니다."
@@ -54,7 +54,7 @@
  heavy_fighter_equipment_1_desc:0 "우리의 폭격 편대는 목표물에 도달했다가 돌아올 때까지 적들의 전투기로부터 보호받기 위한 호위가 필요합니다. 이러한 호위를 제공하기 위해, 우리는 폭격기와 같은 항속거리를 지닌 전투기를 설계해야 합니다. 이 항공기들은 필요 상 경전투기에 비해 크고 느려졌으며, 민첩하지도 않지만 그들의 중요한 무장을 탑재할 수 있습니다."
  heavy_fighter_equipment_2:0 "중전투기 II"
  heavy_fighter_equipment_2_short:0 "중전투기 II"
- heavy_fighter_equipment_2_desc:0 "전쟁은 우리의 중 전투기 설계는 그보다 더 재빠른 전투기들에게 피해입기 쉬웠으나, 적의 폭격기를 포함한 중장갑의 기체를 요격하는데에는 효과적인것을 우리에게 가르쳐주었습니다. 이 뒤의 설계는 적 항공기 뿐만 아니라 지상 목표까지 공격 성능을 끌어올리는데 초점을 맞출 것입니다. 그만큼 속도와 항속 거리 역시 향상 될 것입니다."
+ heavy_fighter_equipment_2_desc:0 "전쟁은 우리의 중전투기 설계는 그보다 더 재빠른 전투기들에 피해당하기 쉬웠으나, 적의 폭격기를 포함한 중장갑의 기체를 요격하는 데에는 효과적인 것을 우리에게 가르쳐주었습니다. 이 뒤의 설계는 적 항공기뿐만 아니라 지상 목표까지 공격 할 수 있도록 성능을 끌어올리는 데 초점을 맞출 것입니다. 그만큼 속도와 항속거리 역시 향상될 것입니다."
  heavy_fighter_equipment_3:0 "중전투기 III"
  heavy_fighter_equipment_3_short:0 "중전투기 III"
  heavy_fighter_equipment_3_desc:0 "우리 중전투기 세력이 다양한 역할에 숙련된 것을 보이고 있지만, 우리는 적 전투기보다 상대적으로 더 뛰어난 능력을 가질 뿐만 아니라 적 폭격기를 방어하는데 더 빠르고 더 많이 요격율을 높일 새로운 설계를 고려해야 합니다."
@@ -79,7 +79,7 @@
  tac_bomber_equipment_1_desc:0 "중형 폭격기들은 그들의 신속하고 다양한 임무를 수행할 항속거리가 요구됩니다. 상대적으로 가벼움이 남아있는 쌍발기 설계는 앞으로 몇년 동안은 거뜬히 사용할 수 있습니다."
  tac_bomber_equipment_2:0 "전술폭격기 II"
  tac_bomber_equipment_2_short:0 "전술폭격기 II"
- tac_bomber_equipment_2_desc:0 "전술폭격기에 대한 크고 강력한 설계는 항속 거리와 폭장량, 속도를 늘리면서 다양한 임무를 수행할 능력을 유지하게 합니다."
+ tac_bomber_equipment_2_desc:0 "전술폭격기에 대한 크고 강력한 설계는 항속거리와 폭장량, 속도를 늘리면서 다양한 임무를 수행할 능력을 유지하게 합니다."
  tac_bomber_equipment_3:0 "전술폭격기 III"
  tac_bomber_equipment_3_short:0 "전술폭격기 III"
  tac_bomber_equipment_3_desc:0 "전투기의 발전에서 참고한 비전통적인 재료와 외형은 이제까지 만들어진 그 어떤 쌍발기보다 더 빠르고 최고의 성능을 내는 설계를 가능하게 했습니다."
@@ -111,10 +111,10 @@
  CAS_equipment_3_desc:0 "발전하는 적의 대공능력과 요격기들은 우리의 근접항공지원기들의 진화를 요구하고 있습니다. 이 새로운 설계는 증가한 엔진의 출력, 급강하 능력과 방어력을 늘린 동체, 더 많은 폭장량을 포함하고 있습니다."
  jet_fighter_equipment_1:0 "제트전투기 I"
  jet_fighter_equipment_1_short:0 "제트전투기 I"
- jet_fighter_equipment_1_desc:0 "이전의 속도 증가는 첫번째 제트전투기 도입 앞에서 무색해졌습니다. 우리는 아직 이 엔진을 위한 최상의 기체를 구성하는 방법을 가지고 있지만, 일반 전투기는 경쟁 할 수 없습니다."
+ jet_fighter_equipment_1_desc:0 "이전의 속도 증가는 첫 번째 제트전투기 도입 앞에서 무색해졌습니다. 우리는 아직 이 엔진을 위한 최상의 기체를 구성하는 방법을 가지고 있지만, 일반 전투기는 경쟁할 수 없습니다."
  jet_fighter_equipment_2:0 "제트전투기 II"
  jet_fighter_equipment_2_short:0 "제트전투기 II"
- jet_fighter_equipment_2_desc:0 "후퇴익과 가벼운 소재를 채택한 새로운 설계는 항속 거리와 속도의 향상에 있어서 제트전투기 이상의 혁명을 이루어냈습니다."
+ jet_fighter_equipment_2_desc:0 "후퇴익과 가벼운 소재를 채택한 새로운 설계는 항속거리와 속도의 향상에 있어서 제트전투기 이상의 혁명을 이루어냈습니다."
  jet_tac_bomber_equipment_1:0 "제트전술폭격기 I"
  jet_tac_bomber_equipment_1_short:0 "제트전술폭격기 I"
  jet_tac_bomber_equipment_1_desc:0 "제트전투기의 출현은 폭격기들에게 그들의 속도를 더 빠르게 하거나 최소한 같게 만들어야 할 필요성을 낳았습니다. 제트 엔진을 장착한 1세대 중형 폭격기와 전폭기들은 이 임무를 충족시킬 수 있을 것입니다."
@@ -168,7 +168,7 @@
  JAP_rocket_suicide_equipment_1_desc:0 "요코스카 MXY-7 오카는 제2차 세계대전 끝 무렵 일본에 의해, 로켓 추진 유인-유도-대함 자살특공기로 특별히 만들어졌습니다."
  GER_fighter_equipment_0:0 "하인켈 He 51"
  GER_fighter_equipment_0_short:0 "He 51"
- GER_fighter_equipment_1:0 "하인켈 He 112"
+ GER_fighter_equipment_1:0 "메서슈미트 Bf 109"
  GER_fighter_equipment_1_short:0 "He 112"
  GER_fighter_equipment_2:0 "포케-불프 Fw 190"
  GER_fighter_equipment_2_short:0 "Fw 190"
@@ -182,7 +182,7 @@
  GER_heavy_fighter_equipment_3_short:0 "Ju 388"
  GER_strat_bomber_equipment_1:0 "도르니에 Do 19"
  GER_strat_bomber_equipment_1_short:0 "Do 19"
- GER_strat_bomber_equipment_2:0 "하인켈 He 177 'Greif'"
+ GER_strat_bomber_equipment_2:0 "하인켈 He 177 '그라이프'"
  GER_strat_bomber_equipment_2_short:0 "He 177 '그라이프'"
  GER_strat_bomber_equipment_3:0 "포케-불프 Ta 400"
  GER_strat_bomber_equipment_3_short:0 "Ta 400"
@@ -219,7 +219,7 @@
  GER_CAS_equipment_3_short:0 "Hs-129"
  GER_rocket_interceptor_equipment_1:0 "메서슈미트 Me 163 '코멧'"
  GER_rocket_interceptor_equipment_1_short:0 "Me 163 '코멧'"
- GER_rocket_interceptor_equipment_2:0 "플리겐트 판처파우스트"
+ GER_rocket_interceptor_equipment_2:0 "플리겐트 판저파우스트"
  GER_rocket_interceptor_equipment_2_short:0 "FPF"
  GER_rocket_interceptor_equipment_3:0 "포케-불프 폭스예거"
  GER_rocket_interceptor_equipment_3_short:0 "Fw VJ"
@@ -369,12 +369,12 @@
  ENG_cv_CAS_equipment_1_short:0 "오스프리"
  ENG_cv_CAS_equipment_2:0 "블랙번 스쿠아"
  ENG_cv_CAS_equipment_2_short:0 "스쿠아"
- ENG_cv_CAS_equipment_3:0 "호커 씨퓨리"
- ENG_cv_CAS_equipment_3_short:0 "씨퓨리"
+ ENG_cv_CAS_equipment_3:0 "호커 시퓨리"
+ ENG_cv_CAS_equipment_3_short:0 "시퓨리"
  ENG_cv_fighter_equipment_0:0 "호커 님로드"
  ENG_cv_fighter_equipment_0_short:0 "님로드"
- ENG_cv_fighter_equipment_1:0 "글로스터 씨 글래디에이터"
- ENG_cv_fighter_equipment_1_short:0 "씨 글래디에이터"
+ ENG_cv_fighter_equipment_1:0 "글로스터 시 글래디에이터"
+ ENG_cv_fighter_equipment_1_short:0 "시 글래디에이터"
  ENG_cv_fighter_equipment_2:0 "페어리 풀머"
  ENG_cv_fighter_equipment_2_short:0 "풀머"
  ENG_cv_fighter_equipment_3:0 "페어리 파이어플라이"
@@ -657,16 +657,16 @@
  NZL_cv_CAS_equipment_2_short:0 "스쿠아"
  SAF_cv_CAS_equipment_2_short:0 "스쿠아"
  RAJ_cv_CAS_equipment_2_short:0 "스쿠아"
- CAN_cv_CAS_equipment_3:0 "호커 시 퓨리"
- AST_cv_CAS_equipment_3:0 "호커 시 퓨리"
- NZL_cv_CAS_equipment_3:0 "호커 시 퓨리"
- SAF_cv_CAS_equipment_3:0 "호커 시 퓨리"
- RAJ_cv_CAS_equipment_3:0 "호커 시 퓨리"
- CAN_cv_CAS_equipment_3_short:0 "시 퓨리"
- AST_cv_CAS_equipment_3_short:0 "시 퓨리"
- NZL_cv_CAS_equipment_3_short:0 "시 퓨리"
- SAF_cv_CAS_equipment_3_short:0 "시 퓨리"
- RAJ_cv_CAS_equipment_3_short:0 "시 퓨리"
+ CAN_cv_CAS_equipment_3:0 "호커 시퓨리"
+ AST_cv_CAS_equipment_3:0 "호커 시퓨리"
+ NZL_cv_CAS_equipment_3:0 "호커 시퓨리"
+ SAF_cv_CAS_equipment_3:0 "호커 시퓨리"
+ RAJ_cv_CAS_equipment_3:0 "호커 시퓨리"
+ CAN_cv_CAS_equipment_3_short:0 "시퓨리"
+ AST_cv_CAS_equipment_3_short:0 "시퓨리"
+ NZL_cv_CAS_equipment_3_short:0 "시퓨리"
+ SAF_cv_CAS_equipment_3_short:0 "시퓨리"
+ RAJ_cv_CAS_equipment_3_short:0 "시퓨리"
  CAN_cv_fighter_equipment_0:0 "호커 님로드"
  AST_cv_fighter_equipment_0:0 "호커 님로드"
  NZL_cv_fighter_equipment_0:0 "호커 님로드"
@@ -985,11 +985,11 @@
  FRA_heavy_fighter_equipment_3_short:0 "Bre 700 C2"
  FRA_fighter_equipment_0:0 "뉴포르-들라쥬 NiD 62"
  FRA_fighter_equipment_0_short:0 "NiD 62"
- FRA_fighter_equipment_1:0 "모랑-솔니에 M.S.406"
+ FRA_fighter_equipment_1:0 "모란-소니에 M.S.406"
  FRA_fighter_equipment_1_short:0 "M.S.406"
  FRA_fighter_equipment_2:0 "드와틴 D.520"
  FRA_fighter_equipment_2_short:0 "D.520"
- FRA_fighter_equipment_3:0 "블로크 MB.157"
+ FRA_fighter_equipment_3:0 "블로흐 MB.157"
  FRA_fighter_equipment_3_short:0 "MB.157"
  FRA_jet_fighter_equipment_1:0 "다쏘 우라강"
  FRA_jet_fighter_equipment_1_short:0 "우라강"
@@ -1001,17 +1001,17 @@
  FRA_nav_bomber_equipment_3_short:0 "D.750"
  FRA_strat_bomber_equipment_1:0 "파르망 F.223"
  FRA_strat_bomber_equipment_1_short:0 "F.223"
- FRA_strat_bomber_equipment_2:0 "블로크 MB.162"
+ FRA_strat_bomber_equipment_2:0 "블로흐 MB.162"
  FRA_strat_bomber_equipment_2_short:0 "MB.162"
  FRA_strat_bomber_equipment_3:0 "브레게 482"
  FRA_strat_bomber_equipment_3_short:0 "Bre 482"
- FRA_tac_bomber_equipment_0:0 "블로크 MB.200"
+ FRA_tac_bomber_equipment_0:0 "블로흐 MB.200"
  FRA_tac_bomber_equipment_0_short:0 "MB.200"
  FRA_tac_bomber_equipment_1:0 "아미오 143"
  FRA_tac_bomber_equipment_1_short:0 "아미오 143"
  FRA_tac_bomber_equipment_2:0 "뤼오레-에-올리비에 LeO 451"
  FRA_tac_bomber_equipment_2_short:0 "LeO 451"
- FRA_tac_bomber_equipment_3:0 "블로크 MB.174"
+ FRA_tac_bomber_equipment_3:0 "블로흐 MB.174"
  FRA_tac_bomber_equipment_3_short:0 "MB.174"
  FRA_cv_nav_bomber_equipment_1:0 "라테코에르 298B"
  FRA_cv_nav_bomber_equipment_1_short:0 "Laté 298B"
@@ -1091,10 +1091,10 @@
  BEL_tac_bomber_equipment_2_short:0 "R-PZL 37"
  BEL_jet_fighter_equipment_2:0 "SABCA 헌터"
  BEL_jet_fighter_equipment_2_short:0 "헌터"
- BUL_CAS_equipment_1:0 "DAR 10"
- BUL_CAS_equipment_1_short:0 "DAR 10"
- BUL_CAS_equipment_2:0 "KB-11 파잔"
- BUL_CAS_equipment_2_short:0 "KB-11"
+ BUL_CAS_equipment_1:0 "DAR-3 가르반 III"
+ BUL_CAS_equipment_1_short:0 "DAR-3"
+ BUL_CAS_equipment_2:0 "DAR-10"
+ BUL_CAS_equipment_2_short:0 "DAR-10"
  CAN_jet_fighter_equipment_1:0 "드 하빌랜드 뱀파이어"
  CAN_jet_fighter_equipment_1_short:0 "뱀파이어"
  CAN_jet_fighter_equipment_2:0 "CL 100 카누크"
@@ -1611,7 +1611,7 @@
  SER_heavy_fighter_equipment_1_short:0 "IK-5"
  SER_heavy_fighter_equipment_2:0 "로고자르스키 R-313"
  SER_heavy_fighter_equipment_2_short:0 "R-313"
- SER_heavy_fighter_equipment_3:0 "Nenadovic-Mitrovic"
+ SER_heavy_fighter_equipment_3:0 "네나도비츠-미트로비츠"
  SER_heavy_fighter_equipment_3_short:0 "NEMI"
  SER_CAS_equipment_1:1 "로고자르스키 R-100"
  SER_CAS_equipment_1_short:1 "R-100"
@@ -1641,33 +1641,33 @@
  SER_nav_bomber_equipment_2_short:0 "SIM-XIX-V"
  SER_nav_bomber_equipment_3:0 "이카루스 IK-19"
  SER_nav_bomber_equipment_3_short:0 "IK-19"
- scout_plane:0 "Scout Plane"
- scout_plane_equipment_desc:0 "A plane developed specifically for photo reconnaisance. Relies primarily on speed and stealth to survive and will lose in any stand-up fight."
- scout_plane_equipment:0 "Scout Planes"
- scout_plane_equipment_1:0 "Scout Plane I"
- scout_plane_equipment_1_desc:0 "Gathering intelligence on enemy troop movements and providing reports of enemy naval deployments has been the original mission for airplanes since their first deployment in the Great War, and is still an important mission."
- scout_plane_equipment_2:0 "Scout Plane II"
- scout_plane_equipment_2_desc:0 "By developing dedicated planes for aerial surveillance and long-range reconnaissance, we ensure that we gain and maintain an accurate picture of our opponent's intentions and capabilities."
- GER_scout_plane_equipment_1:0 "Henschel Hs 126"
+ scout_plane:0 "정찰기"
+ scout_plane_equipment_desc:0 "직접 정찰을 위해 특별히 개발된 항공기. 생존을 위해 주로 속도와 은폐에 의존하며 단독 전투에서 승리할 수 없습니다."
+ scout_plane_equipment:0 "정찰기"
+ scout_plane_equipment_1:0 "정찰기 I"
+ scout_plane_equipment_1_desc:0 "적의 병력 이동에 대한 정보 수집과 적 해군의 배치 보고 등은 대전쟁에 처음 배치된 이래 비행기의 임무였으며, 여전히 중요한 임무입니다."
+ scout_plane_equipment_2:0 "정찰기 II"
+ scout_plane_equipment_2_desc:0 "항공 감시와 장거리 정찰 전용기를 개발함으로써, 우리는 상대의 의도와 전력을 정확히 파악하는 능력을 유지할 수 있음을 확신합니다."
+ GER_scout_plane_equipment_1:0 "헨셸 Hs 126"
  GER_scout_plane_equipment_1_short:0 "Hs. 126"
- GER_scout_plane_equipment_2:0 "Focke-Wulf Fw 189"
+ GER_scout_plane_equipment_2:0 "포케-불프 Fw 189"
  GER_scout_plane_equipment_2_short:0 "Fw 189"
- USA_scout_plane_equipment_1:0 "F4 Lightning"
+ USA_scout_plane_equipment_1:0 "F4 라이트닝"
  USA_scout_plane_equipment_1_short:0 "F4"
- USA_scout_plane_equipment_2:0 "F6 Mustang"
+ USA_scout_plane_equipment_2:0 "F6 머스탱"
  USA_scout_plane_equipment_2_short:0 "F6"
  RUS_scout_plane_equipment_1:0 "R-10"
  RUS_scout_plane_equipment_2:0 "Yak-2"
- JAP_scout_plane_equipment_1:0 "Mitsubishi Ki-46"
+ JAP_scout_plane_equipment_1:0 "미쓰비시 Ki-46"
  JAP_scout_plane_equipment_1_short:0 "Ki-46"
- JAP_scout_plane_equipment_2:0 "Nakajima J1N1-C"
+ JAP_scout_plane_equipment_2:0 "나카지마 J1N1-C"
  JAP_scout_plane_equipment_2_short:0 "J1N1-C"
- ITA_scout_plane_equipment_1:0 "Caproni Ca.310"
+ ITA_scout_plane_equipment_1:0 "카프로니 Ca.310"
  ITA_scout_plane_equipment_1_short:0 "Ca.310"
- ITA_scout_plane_equipment_2:0 "Caproni Ca.311"
+ ITA_scout_plane_equipment_2:0 "카프로니 Ca.311"
  ITA_scout_plane_equipment_2_short:0 "Ca.311"
- FRA_scout_plane_equipment_1:0 "Bloch MB-131"
+ FRA_scout_plane_equipment_1:0 "블로흐 MB-131"
  FRA_scout_plane_equipment_1_short:0 "MB-131"
  FRA_scout_plane_equipment_2:0 "CAO-700"
- ENG_scout_plane_equipment_1:0 "Spitfire PR"
- ENG_scout_plane_equipment_2:0 "Mosquito PR"
+ ENG_scout_plane_equipment_1:0 "스핏파이어 PR"
+ ENG_scout_plane_equipment_2:0 "모스키토 PR"
