--- a/localisation/ita_focus_l_english.yml
+++ b/localisation/ita_focus_l_english.yml
@@ -1,12 +1,12 @@
 ﻿l_english:
  ITA_industry:0 "이탈리아 산업"
- ITA_industry_desc:0 "We have been neglecting our industrial capacity for far too long. It is time to take our first steps towards industrialisation!"
+ ITA_industry_desc:0 "우리의 산업 역량을 너무 오랫동안 방치해 왔습니다. 이제 산업화를 향한 첫 걸음을 내딛을 때입니다!"
  ITA_kingdom_of_italy:0 "왕국의 미래"
- ITA_kingdom_of_italy_desc:0 "Ever since the great war, our people have been divided in their opinions. Now is the moment for us to break the political gridlock once and for all."
+ ITA_kingdom_of_italy_desc:0 "대전쟁 이후 우리 국민들은 정치적 의견이 분분했습니다. 지금이 바로 우리가 정치의 정체를 완전히 타개할 때입니다."
  ITA_infrastructure:0 "기반시설 주력"
- ITA_infrastructure_desc:0 "Our Roman ancestors were not only famous for their vast empire, but also for the enormous network of roads that connected that empire. Let us take their example and construct new road networks within our domains!"
+ ITA_infrastructure_desc:0 "우리의 조상 로마인들은 거대한 제국뿐만 아니라 제국을 연결하는 거대한 도로망으로도 유명했습니다. 그들을 본받아 우리 영토 안에 새로운 도로망을 건설합시다!"
  ITA_civil_effort:0 "새 민간공장"
- ITA_civil_effort_desc:0 "Building new factories will increase our industrial output, as well as provide our populace with new job opportunities."
+ ITA_civil_effort_desc:0 "새로 공장을 짓는 것은 산업 생산량을 증가시킬 뿐만 아니라 국민들에게 새 일자리를 제공할 것입니다."
  ITA_dockyards:0 "새 조선소"
  ITA_dockyards_desc:0 "During the 1st Punic War, our ancestors quickly realised that a strong fleet is an important asset to any state, that can shift the tides of war. We must follow in Gaius Lutatius Catulus' footsteps and increase our naval production capacities"
  ITA_milit_effort:0 "새 군수공장"
