--- a/localisation/sinkiang_l_english.yml
+++ b/localisation/sinkiang_l_english.yml
@@ -15,11 +15,11 @@
  sink.1001.a:0 "그는 우리 지원을 받는다"
  sink.1002.t:0 "Preparations for Sheng's Expedition Finished"
  sink.1002.d:0 "Our Generals have gathered the necassary equipment and material for Sheng's Expedition. His Men have been trained and the plans have been set up. Sheng will now depart to Sinkiang to overthrow the Tryant Ma Zhongying."
- sink.1002.a:0 "We wish him good luck"
- sink.1003.t:0 "Sheng Shicai Returns with Russian Backing!"
+ sink.1002.a:0 "행운을 빈다."
+ sink.1003.t:0 "러시아의 지원을 받은 성스차이의 귀환!"
  sink.1003.d:0 "It seems that we have fallen out of failure with the Russians and the Qing. They have chosen the former Commander of Jin Shuren, Sheng Shicai as the new governor. He has crossed the border with his army supplied by Russian Tanks and Airplanes."
- sink.1003.a:0 "Defend the Clique to the last Man!"
- sink.2000.t:0 "War Returns to Sinkiang"
+ sink.1003.a:0 "최후의 한 사람까지 군벌을 지켜라!"
+ sink.2000.t:0 "신강에 돌아온 전쟁"
  sink.2000.d:0 ""
- sink.2000.a:0 "Will Peace ever return to the province?"
+ sink.2000.a:0 "신강성에 평화가 다시 찾아오기는 할까?"
  POLITICS_MA_ZHONGYING_DESC:0 "그는 마치 네 번째 봉인이 깨졌을 때 나타나는 창백한 말의 기수 같았습니다; 그리고 보니 푸르스름한 말 한 필이 있고 그 위에 탄 사람은 죽음이라는 이름을 가진 사람이었습니다. 그리고 그 뒤에는 지옥이 따르고 있었습니다. 그들에게는 땅의 사분의 일을 지배하는 권한 곧 칼과 기근과 죽음, 그리고 땅의 짐승들을 가지고 사람을 죽이는 권한이 주어졌습니다. 한때 그는 아기 장군이나 작은 사령관으로 알려져 있었는데, 그는 마가 군벌의 영역에서 자신의 군대와 함께 싸웠습니다. 하지만 그는 곧 쿠물 반란과 함께 이 칭호를 잃게 되었습니다. 마중잉은 쿠물주의자들이 도움을 요청하고 신장 영토에서 볼 수 있는 가장 큰 분쟁을 일으켰다고 말했습니다. 그의 운동은 하나의 잔인함, 죽음, 억압이었습니다. 1933년 그는 마지못해 러시아나 청의 외부 개입을 피하기 위해 베이징 행정부에 충성한다고 선언했습니다. 전 주지사 진수런을 타도하고 신장을 장악한 지 1년 후였습니다. 그는 한족을 억압하고 다수의 위구르족을 계속 억압하고 있습니다. 그와 같은 회족은 고위직이나 공무원으로 선호되는 유일한 사람들입니다. 신장 대부분의 지역에서 그는 죽음의 전령이고 그가 그의 방식을 바꿀 것 같지는 않습니다."
